Harden v5 APIs and scanning behavior